# gbc_emulator

./: .gitignore  CMakeLists.txt  main.cpp
include/: bus.hpp  cartridge.hpp  cpu.hpp  emulator.hpp  graphics.hpp  types.hpp
src/: CMakeLists.txt  bus.cpp  cartridge.cpp  cpu.cpp  emulator.cpp  graphics.cpp  opcodes.cpp
